--- a/app/views/application/privacy_policy.html.erb
+++ b/app/views/application/privacy_policy.html.erb
@@ -12,10 +12,10 @@
     <h2>Personal data collected</h2>
     <p>By accessing this website, you provide your IP address to our servers.</p>
     <p>To create a user account on this website, you must provide a valid email address and choose a password.</p>
-    <p>To create a modder profile, you must provide your “modder name,” approximate location, a link to a website or social media presence, and optionally a brief “bio” describing yourself as a modder, the services you provide, and a user-uploaded logo.</p>
+    <p>To create a modder profile, you must provide your “modder name,” approximate location, one or more links to a website and/or social media presence, and optionally a brief “bio” describing yourself as a modder, the services you provide, and a user-uploaded logo.</p>
 
     <h2>Use of personal data</h2>
-    <p>We may use the personal data you provide without restriction to provide the features offered on this website; to respond to service and/or security issues; to detect or prevent technicaly issues or fraud or other abuses of our systems; to improve the features offered on this website; to provide aggregated analysis to our users; and as required by law.</p>
+    <p>We may use the personal data you provide without restriction to provide the features offered on this website; to respond to service and/or security issues; to detect or prevent technical issues or fraud or other abuses of our systems; to improve the features offered on this website; to provide aggregated analysis to our users; and as required by law.</p>
     <p>Primarily, we use the data you enter to power the primary feature of the website: Allowing users to accurately find nearby modders offering certain services. We use your email address and password to keep your account secure.</p>
 
     <h2>Security of personal data</h2>
