--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -53,7 +53,7 @@
       </div>
     <% end %>
 
-    <p class="big">Register as a modder and get found by people looking for your services.</p>
+    <p class="big">Register as a modder for free and get found by people looking for your services.</p>
     <p>Note that modder content is regularly monitored and subject to removal at any time by the DOL-003 team. Anyone found impersonating a modder, posting or linking to inappropriate content, or taking other actions that are deemed to violate the standards of the community may be subject to permanent suspension without warning.</p>
 
   </section>
