--- a/app/frontend/form.scss
+++ b/app/frontend/form.scss
@@ -31,6 +31,10 @@
     & + .actions {
       margin-top: 32px;
     }
+
+    & + p {
+      margin-top: 8px;
+    }
   }
 
   .error-message {
@@ -44,6 +48,7 @@
     font-weight: bold;
     font-style: normal;
     color: $spice;
+    cursor: default;
   }
 
   .label {
