--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -12,6 +12,8 @@
       <li><%= link_to 'Find a modder', modders_path %></li>
       <% if !user_signed_in? %>
         <li><%= link_to 'Get listed', new_user_registration_path %></li>
+      <% elsif current_modder.blank? %>
+        <li><%= link_to 'Set up profile', edit_profile_path %></li>
       <% end %>
       <li class="close"><label for="menu-toggle" id="menu-close"><%= inline_svg_tag 'x.svg' %></label></li>
     </ul>
@@ -34,6 +36,7 @@
         <ul class="overlay">
           <li class="name"><%= link_to current_modder.name, modder_path(current_modder), class: 'big' %></li>
           <li><%= link_to 'Edit profile', edit_profile_path %></li>
+          <li><%= link_to 'Account settings', edit_user_registration_path %></li>
           <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
         </ul>
 
