--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,25 @@
-<h2>Forgot your password?</h2>
+<div class="content grid">
+  <section class="span-8">
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+    <h2>Password reset</h2>
+    <p>Enter your email address to reset your password.</p>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: 'form' }) do |form| %>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
+      <%= render 'form_field', locals: {
+        resource: resource,
+        form: form,
+        field_name: :email,
+        field_type: :email_field,
+        label: 'Email address',
+        options: { autofocus: true, autocomplete: 'email', class: 'text-input large' }
+      } %>
 
-<%= render "devise/shared/links" %>
+      <div class="actions">
+        <%= form.submit 'Reset password', class: 'button' %>
+      </div>
+
+    <% end %>
+
+  </section>
+</div>
