password reset link

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -2,7 +2,7 @@
   <section class="span-8">
 
     <h2>Password reset</h2>
-    <p>Enter your email address to reset your password.</p>
+    <p>Enter your email address to reset your account password.</p>
 
     <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: 'form' }) do |form| %>
 
