--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,36 @@
-<h2>Change your password</h2>
+<div class="content grid">
+  <section class="span-8">
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
+    <h2>Change your password</h2>
+    <p>Choose a new password for your account.</p>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put, class: 'form' }) do |form| %>
+
+      <%= form.hidden_field :reset_password_token %>
+
+      <%= render 'form_field', locals: {
+        resource: resource,
+        form: form,
+        field_name: :password,
+        field_type: :password_field,
+        label: 'New password',
+        options: { autofocus: true, autocomplete: 'new-password', class: 'text-input large' }
+      } %>
+
+      <%= render 'form_field', locals: {
+        resource: resource,
+        form: form,
+        field_name: :password_confirmation,
+        field_type: :password_field,
+        label: 'Confirm new password',
+        options: { autofocus: true, autocomplete: 'new-password', class: 'text-input large' }
+      } %>
+
+      <div class="actions">
+        <%= form.submit 'Save password', class: 'button' %>
+      </div>
+
     <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+  </section>
+</div>
