email template cleanup

--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,3 +1,5 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>This is a confirmation that your password has been changed on DOL-003.info.</p>
 
-<p>We're contacting you to notify you that your password has been changed.</p>
+<p>If this was not done at your request, please contact us immediately.</p>
+
+<p>— The DOL-003.info team</p>
