--- a/app/views/user_mailer/invitation.html.erb
+++ b/app/views/user_mailer/invitation.html.erb
@@ -3,3 +3,5 @@
 <p>This is your unique invitation link. Click to sign up and set up your modder profile.</p>
 
 <p><%= link_to 'Sign up now →', new_user_registration_url(invitation_token: @invitation_token), class: 'button' %></p>
+
+<p>— The DOL-003.info team</p>
