--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -3,3 +3,5 @@
 <p>Click the button to confirm your account and start setting up your profile!</p>
 
 <p><%= link_to 'Confirm account', confirmation_url(@resource, confirmation_token: @token), class: 'button' %></p>
+
+<p>— The DOL-003.info team</p>
