--- a/app/views/devise/mailer/email_changed.html.erb
+++ b/app/views/devise/mailer/email_changed.html.erb
@@ -1,7 +1,9 @@
-<p>Hello <%= @email %>!</p>
-
 <% if @resource.try(:unconfirmed_email?) %>
-  <p>We're contacting you to notify you that your email is being changed to <%= @resource.unconfirmed_email %>.</p>
+  <p>This is a notice that the email address on your DOL-003.info account is being changed to <%= @resource.unconfirmed_email %>.</p>
 <% else %>
-  <p>We're contacting you to notify you that your email has been changed to <%= @resource.email %>.</p>
+  <p>This is a notice that the email address on your DOL-003.info account has been changed to <%= @resource.email %>.</p>
 <% end %>
+
+<p>If this was not done at your request, please contact us immediately.</p>
+
+<p>— The DOL-003.info team</p>
