--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,8 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>A requested has been made to change your password on DOL-003.info. You can do this through the link below.</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token), class: 'button' %></p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p>If you did not make this request, ignore this email.</p>
+<p>Your password will not change until you access the link above and create a new one.</p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>— The DOL-003.info team</p>
