--- a/app/frontend/entrypoints/knowledge_base.scss
+++ b/app/frontend/entrypoints/knowledge_base.scss
@@ -84,6 +84,21 @@ body.knowledge_base.show {
         line-height: 1.3;
         position: relative;
 
+        &.separator {
+          height: 40px;
+          display: flex;
+          align-items: center;
+          margin: 0 -24px;
+          padding: 0;
+
+          &::after {
+            content: "";
+            height: 1px;
+            width: 100%;
+            background-color: rgba($indigo, 20%);
+          }
+        }
+
         a.current {
           color: $black;
         }
@@ -136,7 +151,7 @@ body.knowledge_base.show {
           display: block;
         }
 
-        & + li {
+        &:not(.separator) + li:not(.separator) {
           margin-top: 12px;
         }
       }
