--- a/app/views/knowledge_base/_menu_tree.html.erb
+++ b/app/views/knowledge_base/_menu_tree.html.erb
@@ -1,15 +1,19 @@
 <ul>
   <% locals[:tree].each do |item| %>
-    <li class="<%= 'current' if path_matches?(item[:path], @current_path) %>">
-      <%= link_to item[:title], item[:path], class: path_matches?(item[:path], @current_path, complete_match: true) ? 'current' : '' %>
-      <% if item[:children].present? %>
-        <%= check_box_tag "menu-toggle-#{item[:path].parameterize}", 'a', path_matches?(item[:path], @current_path) %>
-        <label for="menu-toggle-<%= item[:path].parameterize %>">
-          <%= inline_svg_tag 'plus.svg', class: 'open' %>
-          <%= inline_svg_tag 'minus.svg', class: 'close' %>
-        </label>
-        <%= menu_tree(item[:children], item[:path]) %>
-      <% end %>
-    </li>
+    <% if item === 'separator' %>
+      <li class="separator"></li>
+    <% else %>
+      <li class="<%= 'current' if path_matches?(item[:path], @current_path) %>">
+        <%= link_to item[:title], item[:path], class: path_matches?(item[:path], @current_path, complete_match: true) ? 'current' : '' %>
+        <% if item[:children].present? %>
+          <%= check_box_tag "menu-toggle-#{item[:path].parameterize}", 'a', path_matches?(item[:path], @current_path) %>
+          <label for="menu-toggle-<%= item[:path].parameterize %>">
+            <%= inline_svg_tag 'plus.svg', class: 'open' %>
+            <%= inline_svg_tag 'minus.svg', class: 'close' %>
+          </label>
+          <%= menu_tree(item[:children], item[:path]) %>
+        <% end %>
+      </li>
+    <% end %>
   <% end %>
 </ul>
