--- a/app/views/modders/index.html.erb
+++ b/app/views/modders/index.html.erb
@@ -1,5 +1,8 @@
 <div class="content">
   <h1>Modder search</h1>
+  <% if !@results_visible %>
+    <p class="big">Find modders by the services they offer, by location, or by name.</p>
+  <% end %>
 </div>
 
 <div class="content grid search-fields">
