--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,8 +1,8 @@
 <div class="intro" style="background-image:url(<%= image_path 'index-bg.jpg' %>)">
   <div class="content grid">
     <section class="span-8">
-      <h1>The ultimate directory<br>of GameCube controller modders</h1>
-      <p class="big">Find your next custom controller, or connect with controller modders who can help with diagnostics, repairs, or upgrades. <a href="/about">About DOL-003.info</a>
+      <h1>A directory of GameCube controller modders and artists</h1>
+      <p class="big">Find your next controller, shell or button set, or connect with modders who can help with repairs or upgrades. <a href="/about">About DOL-003.info</a>
     </section>
   </div>
 </div>
