--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
       <meta property="og:title" content="<%= page_title %>">
       <meta property="og:type" content="website">
       <meta property="og:image" content="<%= request.base_url %>/images/logo-large.png">
+      <meta name="twitter:card" content="summary">
     <% end %>
 
     <link rel="shortcut icon" href="/favicon.png">
