--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
       <link property="og:site_name" content="DOL-003.info">
       <meta property="og:title" content="<%= page_title %>">
       <meta property="og:type" content="website">
-      <meta property="og:image" content="<%= request.base_url %>/images/logo-large.png">
+      <meta property="og:image" content="<%= request.base_url %>/images/logo-large.png?2231">
       <meta name="twitter:card" content="summary">
     <% end %>
 
