--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -3,6 +3,7 @@
 
     <div class="span-6">
       <p class="small">DOL-003.info is a repository of GameCube controller information and a directory of community modders. <%= link_to 'Learn more', about_path %></p>
+      <p class="small">Modder info is provided for informational use only. DOL-003.info does not endorse any modder or modder-affiliated content presented.</p>
       <p class="small">© <%= Date.today.year %>. All rights reserved.</p>
       <p class="small"><%= link_to 'Terms of Service', terms_path %> • <%= link_to 'Privacy Policy', privacy_path %> • <%= link_to 'House Rules', rules_path %></p>
     </div>
