always show modder results, and allow toggling services (fixes #28)

--- a/app/frontend/entrypoints/base.scss
+++ b/app/frontend/entrypoints/base.scss
@@ -9,5 +9,6 @@
 @import "@/file-input";
 @import "@/textarea";
 @import "@/select-input";
+@import "@/checkbox";
 @import "@/button";
 @import "@/service-pill";
