--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -30,7 +30,7 @@
 
     <div class="span-4 caption">
       <%= form.label :bio, 'About you', class: 'label large' %>
-      <p class="small">A short bio introducing yourself to people who see your profile. 500 characters max. Note that line breaks will not be preserved.</p>
+      <p class="small">A short bio introducing yourself to people who see your profile. 1000 characters max.</p>
     </div>
     <div class="span-8 input-container">
       <%= render 'form_field', locals: {
