--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -49,7 +49,7 @@
     <% if !@allow_register %>
       <div class="notice">
         <p class="big">DOL-003.info is in private beta.</p>
-        <p>Modder registration is currently by invitation only. If you’ve been invited, click on the link in your invitation email. Otherwise, we’re planning to open sign-ups to the public soon — stay tuned!</p>
+        <p>Modder registration is currently by invitation only. If you’ve been invited, click on the link in your invitation email. Otherwise, you’ll need to get an invitation from someone who is already a member.</p>
       </div>
     <% end %>
 
