--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -37,6 +37,7 @@
           <li class="name"><%= link_to current_modder.name, modder_path(current_modder), class: 'big' %></li>
           <li><%= link_to 'Edit profile', edit_profile_path %></li>
           <li><%= link_to 'Account settings', edit_user_registration_path %></li>
+          <li><%= link_to 'Invite people', new_invitation_path %></li>
           <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
         </ul>
 
