fix buttons in gmail

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -65,17 +65,15 @@
       }
 
       .button {
-        display: inline-flex;
-        flex-flow: row nowrap;
-        align-items: center;
+        display: inline-block;
         border: 0;
-        box-shadow: 0;
+        box-shadow: none;
         height: 48px;
         font-size: 14px;
         font-weight: bold;
         text-transform: uppercase;
         letter-spacing: 1px;
-        padding: 0 24px;
+        padding: 14px 24px 0;
         margin: 0;
         background-color: #444f9a;
         border-radius: 48px;
