--- a/app/views/invitations/new.html.erb
+++ b/app/views/invitations/new.html.erb
@@ -2,10 +2,14 @@
 
   <section class="span-8">
     <h1>Invite people to DOL-003.info</h1>
-    <p class="big">DOL-003.info is currently an invite-only service. As a member, you can invite up to 5 other modders or artists every 30 days.</p>
+    <% if @unlimited_invitations %>
+      <p class="big">DOL-003.info is currently an invite-only service. As a member, you can other modders or artists to join.</p>
+    <% else %>
+      <p class="big">DOL-003.info is currently an invite-only service. As a member, you can invite up to 5 other modders or artists every 30 days.</p>
+    <% end %>
 
-    <% if @available_invitations.positive? %>
-      <p>You currently have <strong><%= pluralize(@available_invitations, 'invitation') %></strong>.</p>
+    <% if @available_invitations.positive? || @unlimited_invitations %>
+      <p>You currently have <strong><%= @unlimited_invitations ? 'unlimited invitations' : pluralize(@available_invitations, 'invitation') %></strong>.</p>
       <p>To invite someone, simply provide their email address and we’ll send them an email with a link to sign up.</p>
       <%= form_with url: invitations_path, html: { method: :post, class: 'form' } do |form| %>
 
@@ -20,7 +24,7 @@
 
       <% end %>
     <% else %>
-      <p>You do not currently have any invitations. Check back later to invite more people.</p>
+      <p>You do not currently have any invitations available. Check back later to invite more people.</p>
     <% end %>
   </section>
 </div>
