--- a/app/views/invitations/new.html.erb
+++ b/app/views/invitations/new.html.erb
@@ -3,7 +3,7 @@
   <section class="span-8">
     <h1>Invite people to DOL-003.info</h1>
     <% if @unlimited_invitations %>
-      <p class="big">DOL-003.info is currently an invite-only service. As a member, you can other modders or artists to join.</p>
+      <p class="big">DOL-003.info is currently an invite-only service. As a member, you can invite other modders or artists to join.</p>
     <% else %>
       <p class="big">DOL-003.info is currently an invite-only service. As a member, you can invite up to <%= @invites_per_month %> other modders or artists every 30 days.</p>
     <% end %>
