--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -10,7 +10,8 @@
 <div class="content grid">
 
   <section class="span-8">
-    <h2>Search by <strong>service</strong></h2>
+    <h2>Search by <strong>tag</strong></h2>
+    <p>Find someone based on what services or parts they offer.</p>
     <ul class="service-list">
       <% ModderService::ALL_SERVICES.map.with_index do |service| %>
         <li>
