--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -79,8 +79,8 @@
     </div>
 
     <div class="span-4 caption">
-      <p class="label large">Services offered</p>
-      <p class="small">Select the services you’re currently offering. This will be displayed on your profile and used to filter search results. You can update this as often as needed to reflect your current offerings.</p>
+      <p class="label large">Tags</p>
+      <p class="small">Select the services and/or parts you’re currently offering. This will be displayed on your profile and used to filter search results. You can update this as often as needed to reflect your current offerings.</p>
     </div>
 
     <div class="span-8 input-container">
