--- a/app/frontend/components/ServiceSelector.scss
+++ b/app/frontend/components/ServiceSelector.scss
@@ -48,6 +48,11 @@
         background-color: #fff;
         box-shadow: inset 0 0 0 2px var(--service-color, $platinum),
           0 8px 8px -12px $black !important;
+
+        &.solid {
+          color: $white;
+          background-color: var(--service-color, $platinum);
+        }
       }
 
       .service-selector__multi-value__remove {
@@ -111,6 +116,11 @@
         background-color: #fff;
         box-shadow: inset 0 0 0 2px var(--service-color, $platinum),
           0 8px 8px -12px $black !important;
+
+        &.solid {
+          color: $white;
+          background-color: var(--service-color, $platinum);
+        }
       }
     }
   }
