--- a/app/frontend/service-pill.scss
+++ b/app/frontend/service-pill.scss
@@ -15,6 +15,11 @@
   color: var(--service-color, $platinum);
   border-radius: 32px;
 
+  &.solid {
+    background-color: var(--service-color, $black);
+    color: $white;
+  }
+
   @include small {
     padding: 0 10px;
     height: 24px;
@@ -26,5 +31,10 @@
     background-color: #fff;
     box-shadow: inset 0 0 0 2px var(--service-color, $platinum),
       0 8px 8px -12px $black;
+
+    &.solid {
+      background-color: var(--service-color, $black);
+      color: $white;
+    }
   }
 }
