--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -13,10 +13,8 @@
     <h2>Search by <strong>tag</strong></h2>
     <p>Find someone based on what services or parts they offer.</p>
     <ul class="service-list">
-      <% ModderService::ALL_SERVICES.map.with_index do |service| %>
-        <li>
-          <%= link_to service[1][:name], modders_path(service: service[0]), class: 'service-pill interactive', style: "--service-color: #{service[1][:color]}" %>
-        </li>
+      <% ModderService.enabled_services.map do |service| %>
+        <li><%= service_link(service) %></li>
       <% end %>
     </ul>
   </section>
