--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -47,7 +47,16 @@
             <%= link_to modder do %>
               <figure class="featured-photo" style="background-image: url(<%= modder.modder_photos.first.photo.thumb.url %>)"></figure>
             <% end %>
-            <h3><%= link_to modder.name, modder %></h3>
+            <h3>
+              <%= link_to modder do %>
+                <figure class="logo" style="<%= "background-image: url(#{modder.logo_url})" if modder.logo.present? %>">
+                  <% if modder.logo.blank? %>
+                    <%= inline_svg_tag 'gcc.svg' %>
+                  <% end %>
+                </figure>
+                <%= modder.name %>
+              <% end %>
+            </h3>
           </div>
         <% end %>
       </div>
