--- a/app/frontend/entrypoints/modders.scss
+++ b/app/frontend/entrypoints/modders.scss
@@ -279,7 +279,7 @@ body.modders.show {
       &.button {
         margin-right: -2px;
 
-        svg {
+        svg.external-icon {
           margin: 0 0 0 12px;
           position: relative;
           top: -1px;
