--- a/app/views/modders/show.html.erb
+++ b/app/views/modders/show.html.erb
@@ -47,7 +47,13 @@
   </section>
 
   <section class="span-4 sidebar">
-    <%= link_to @modder.featured_link_url, target: '_blank', class: 'button' do %><%= @modder.featured_link_text %><%= inline_svg_tag 'external.svg' %><% end %>
+    <%= link_to @modder.featured_link_url, target: '_blank', class: 'button' do %>
+      <% if @modder.featured_link == 'twitter_username' %>
+        <%= inline_svg_tag 'twitter.svg', class: 'link-icon' %>
+      <% end %>
+      <%= @modder.featured_link_text %>
+      <%= inline_svg_tag 'external.svg', class: 'external-icon' %>
+    <% end %>
 
     <% if @modder.website_url.present? && @modder.featured_link != 'website_url' %>
       <%= link_to @modder.website_url, target: '_blank' do %><%= inline_svg_tag 'link.svg' %><%= URI.parse(@modder.website_url).host %><% end %>
